--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/welcome"
+    android:background="@drawable/intro"
     tools:context=".MainActivity">
 
     <ImageView
@@ -34,37 +34,35 @@
         android:id="@+id/mainLoginBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="30dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/buttons"
         android:padding="20dp"
-        android:textAllCaps="false"
-        android:textSize="18sp"
         android:text="Already have An Account? Login"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        ></Button>
+        android:textSize="18sp"></Button>
 
 
     <Button
         android:id="@+id/JoinNowBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       android:layout_above="@+id/mainLoginBtn"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/mainLoginBtn"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="110dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="110dp"
         android:background="@drawable/inputdesign"
         android:padding="20dp"
-        android:textAllCaps="false"
-        android:textSize="18sp"
         android:text="Join Now"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        ></Button>
+        android:textSize="18sp"></Button>
 
 
 
