--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -16,39 +16,38 @@
             android:layout_marginTop="200dp"
             android:background="@drawable/applogo"/>
 
-        <EditText
-            android:id="@+id/loginPhoneNum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/login_logo"
-            android:background="@drawable/inputdesign"
-            android:padding="20dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:hint="Phone number"
-            android:inputType="number"
-            android:textColor="@color/purple_200"
-            android:textColorHint="@color/purple_200"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            />
+    <EditText
+        android:id="@+id/loginPhoneNum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_logo"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/inputdesign"
+        android:hint="Phone number"
+        android:inputType="number"
+        android:padding="20dp"
+        android:textColor="@color/purple_200"
+        android:textColorHint="@color/purple_200"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/loginPassNum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/loginPhoneNum"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/inputdesign"
-            android:hint="Password"
-            android:inputType="number"
-            android:padding="20dp"
-            android:textColor="@color/purple_200"
-            android:textColorHint="@color/purple_200"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+    <EditText
+        android:id="@+id/loginPassNum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/loginPhoneNum"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/inputdesign"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="@color/purple_200"
+        android:textColorHint="@color/purple_200"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/LinearLayout"
@@ -92,21 +91,20 @@
         </LinearLayout>
 
 
-        <Button
-            android:id="@+id/secLoginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/loginPassNum"
-            android:layout_marginTop="60dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/buttons"
-            android:padding="20dp"
-            android:textAllCaps="false"
-            android:textSize="18sp"
-            android:text="Login"
-            android:textColor="@color/white"
-            />
+    <Button
+        android:id="@+id/secLoginBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/loginPassNum"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/buttons"
+        android:padding="20dp"
+        android:text="Login"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
 
         <TextView
