database reading issue

--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -134,8 +134,7 @@
         android:textColor="@color/purple_200"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:visibility="invisible"
-        />
+        android:visibility="invisible" />
 
 
 
