--- a/app/src/main/res/layout/activity_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_nav_drawer.xml
@@ -5,12 +5,13 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
     <include
-        android:id="@+id/app_bar_home2"
-        layout="@layout/app_bar_home2"
+        android:id="@+id/app_bar_nav_drawer"
+        layout="@layout/app_bar_nav_drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -20,6 +21,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_home2"
+        app:headerLayout="@layout/nav_header_nav_drawer"
         app:menu="@menu/activity_main_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
