--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_cart"
+
             android:icon="@drawable/ic_menu_camera"
             android:title="Cart"
             android:iconTint="@android:color/background_dark"/>
@@ -23,8 +24,9 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Tools"
+            android:title="Settings"
             android:iconTint="@android:color/white"/>
+
 
         <item
             android:id="@+id/nav_logout"
