--- a/app/src/main/res/layout/activity_product_items.xml
+++ b/app/src/main/res/layout/activity_product_items.xml
@@ -33,9 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_below="@+id/product_name"
-            android:scaleType="centerCrop"
             android:layout_marginTop="2dp"
-            />
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/product_price"
