--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -82,15 +82,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_image_change_btn"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="#A8A7A7"
         android:hint="Phone Number..."
-        android:layout_margin="15dp"
-        android:padding="10dp"
-        />
+        android:padding="10dp" />
 
     <EditText
         android:id="@+id/settings_full_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#A8A7A7"
         android:layout_below="@+id/settings_phone_number"
         android:hint="Full Name..."
         android:layout_margin="15dp"
@@ -101,6 +105,7 @@
         android:id="@+id/settings_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#A8A7A7"
         android:layout_below="@+id/settings_full_name"
         android:hint="Address..."
         android:layout_margin="15dp"
