--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_cart"
-        android:name="com.example.ecommerce.ui.cartFragment"
+        android:name="com.example.ecommerce.cart.cartFragment"
         android:label="Cart"
         tools:layout="@layout/fragment_cart" />
 
