--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,7 +8,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_cart"
+            android:id="@+id/nav_basket"
             android:icon="@drawable/ic_menu_camera"
             android:title="Cart"
             android:iconTint="@android:color/background_dark"/>
