--- a/app/src/main/res/layout/activity_confirm_final.xml
+++ b/app/src/main/res/layout/activity_confirm_final.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:layout_marginTop="60dp"
     tools:context=".ConfirmFinalActivity">
 
