--- a/app/src/main/res/layout/fragment_cart_the_right_one.xml
+++ b/app/src/main/res/layout/fragment_cart_the_right_one.xml
@@ -25,6 +25,20 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/MSG1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Congratulations, Your final order has been placed successfully,Soon it will be verified "
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_centerVertical="true"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        android:textSize="20sp" />
+
 
     <androidx.recyclerview.widget.RecyclerView
 
