--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -25,12 +25,12 @@
                     android:id="@+id/close_settings_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+
                     android:text="Close"
                     android:textColor="@android:color/white"
                     android:textSize="17sp"
-                    android:textStyle="bold"
-                    android:layout_alignParentStart="true"
-                    />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/update_account_settings_btn"
@@ -67,15 +67,15 @@
         android:id="@+id/profile_image_change_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Profile"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="4dp"
-        android:textColor="@android:color/black"
         android:layout_below="@+id/settingProfileImage"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="10dp"
+        android:text="Change Profile"
+
+        android:textColor="@android:color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/settings_phone_number"
@@ -86,7 +86,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:background="#A8A7A7"
+        android:background="@drawable/inputdesign"
         android:hint="Phone Number..."
         android:padding="10dp" />
 
@@ -94,7 +94,7 @@
         android:id="@+id/settings_full_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#A8A7A7"
+        android:background="@drawable/inputdesign"
         android:layout_below="@+id/settings_phone_number"
         android:hint="Full Name..."
         android:layout_margin="15dp"
@@ -105,7 +105,7 @@
         android:id="@+id/settings_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#A8A7A7"
+        android:background="@drawable/inputdesign"
         android:layout_below="@+id/settings_full_name"
         android:hint="Address..."
         android:layout_margin="15dp"
