--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,9 +13,9 @@
             android:title="Cart"
             android:iconTint="@android:color/background_dark"/>
         <item
-            android:id="@+id/nav_orders"
+            android:id="@+id/nav_search"
             android:icon="@drawable/orders"
-            android:title="Orders"
+            android:title="Search"
             android:iconTint="@android:color/white"/>
         <item
             android:id="@+id/nav_categories"
