--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,10 +13,10 @@
 
 
     <fragment
-        android:id="@+id/nav_orders"
-        android:name="com.example.ecommerce.ui.gallery.GalleryFragment"
-        android:label="Orders"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_search"
+        android:name="com.example.ecommerce.searchFragment"
+        android:label="Search"
+        tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/nav_categories"
